vertical align fix for forms

--- a/src/pages/OrderPage/OrderPageContent/OrderProcess/OrderProcessContent/LocationStepContainer/LocationStep/style.scss
+++ b/src/pages/OrderPage/OrderPageContent/OrderProcess/OrderProcessContent/LocationStepContainer/LocationStep/style.scss
@@ -12,6 +12,7 @@
 
             .location-step__label {
                 margin-right: 8px;
+                vertical-align: middle;
             }
 
             // Styles for custom autocomplete field
@@ -77,14 +78,6 @@
             position: relative;
             height: 352px;
             width: 736px;
-
-            &.location-step__map_active {
-                z-index: 0;
-                transition: all 0.6s ease-out;
-            }
-            &.location-step__map_disabled {
-                z-index: -1;
-            }
         }
     }
 }
